# Course-Work-FAIS

./: AStar.cpp  AStar.hpp  BFS.cpp  BFS.hpp  BranchAndBound.cpp  BranchAndBound.hpp  CMakeLists.txt  DFS.cpp  DFS.hpp  Dijkstra.cpp  Dijkstra.hpp  GradientSearch.cpp  GradientSearch.hpp  PriceMatch.cpp  PriceMatch.hpp  README.md  SearchNode.cpp  SearchNode.hpp  Situation.cpp  Situation.hpp  main.cpp
